# optionrs

./: .gitignore  Cargo.toml  LICENSE  README.md  tarpaulin-report.html
src/: errors.rs  lib.rs
src/binomial/: mod.rs
src/black_scholes/: mod.rs
src/brownian/: mod.rs
src/core/: analytic.rs  binomial.rs  engine.rs  engine_config.rs  mod.rs  monte_carlo.rs  pde.rs  pdes.rs
src/core/analytic/: engine.rs  mod.rs
src/core/analytic/calculators/: barrier.rs  binary.rs  mod.rs  vanilla.rs
src/core/pde/: engine.rs  mod.rs
src/core/pde/methods/: crank_nicolson.rs  explicit.rs  implicit.rs  mod.rs
src/exotic_options/: mod.rs
src/generic/: mod.rs
src/monte_carlo/: mod.rs
src/params/: common.rs  european.rs  mod.rs
src/pde/: mod.rs
src/products/: european_call.rs  mod.rs
src/simulation/: brownian.rs  mod.rs
src/traits/: engine.rs  exercise.rs  mod.rs  payoff.rs  process.rs
src/utils/: distributions.rs  linear_algebra.rs  math.rs  mod.rs  statistics.rs
tests/: pricing_consistency.rs
